# gpu-rest-engine

./: .gitignore  Dockerfile.caffe_ssd_server  Dockerfile.tensorrt_ssd_server
caffe_ssd/: SSD.cpp  SSD.h  detection.cpp  main.go
models/VGGNet/VOC0712/SSD_300x300/: deploy.prototxt
tensorrt_ssd/: main.go
tensorrt_ssd/Cuda/: SoftmaxPlugin.cu
tensorrt_ssd/include/: SSD.h  cudaUtility.h
tensorrt_ssd/include/plugin/: FlattenPlugin.h  ReshapePlugin.h  SoftmaxPlugin.h
tensorrt_ssd/src/: SSD.cpp  cudaUtility.cpp  pluginImplement.cpp
tensorrt_ssd_dev/: CMakeLists.txt  err.txt
tensorrt_ssd_dev/include/: InferenceEngine.h  detection.h  pluginImplement.h
tensorrt_ssd_dev/src/: InferenceEngine.cpp  detection.cpp  main.cpp
tensorrt_ssd_dev/src/plugin/: FlattenPlugin.cpp  ReshapePlugin.cpp  SoftmaxPlugin.cpp
